--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
 		<!-- NAVIGATION START -->
 		<div class="navbar-fixed">
 			<nav>
-			  <div class="nav-wrapper">
-				<a href="#!" class="brand-logo">Unitainment</a>
-				<ul class="right hide-on-med-and-down">
-				  <li><a href="sass.html">Blog List</a></li>
-				  <li><a href="badges.html">Add Blog Entry</a></li>
-				</ul>
-			  </div>
+				<div class="nav-wrapper">
+					<a href="#!" class="brand-logo">Logo</a>
+					<ul class="right hide-on-med-and-down">
+						<li class="searchBar"><input type="text" placeholder="Search The Park"></li>
+					</ul>
+				</div>
 			</nav>
 		  </div>
 				  <!-- NAVIGATION END -->
 	
 	<!-- CONTAINER START -->
 	<main>
-		<div class="container">
-			This is the body
+		<div class="container body">
+			<div id="body" class="row">
+			</div>
 			
 		</div>
 	</main>
@@ -48,6 +48,17 @@
   </footer>
 	  
 <!-- FOOTER END -->
+
+ <!-- Modal Structure -->
+ <div id="modal1" class="modal modal-fixed-footer">
+	<div class="modal-content">
+		<input type="text" placeholder="Search...">
+	</div>
+	<div class="modal-footer">
+		<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Search</a>
+	</div>
+</div>
+
 
 <!-- SCRIPTS -->
   		<!-- JQUERY -->
