--- a/index.html
+++ b/index.html
@@ -18,11 +18,26 @@
 
 		<!-- NAVIGATION START -->
 		<div class="navbar-fixed">
+			<!-- Dropdown Structure -->
+		<ul id="dropdown1" class="dropdown-content">
+				<li><a href="#!">9:00 AM</a></li>
+				<li><a href="#!">10:00 AM</a></li>
+				<li><a href="#!">11:00 AM</a></li>
+				<li><a href="#!">12:00 AM</a></li>
+				<li><a href="#!">1:00 PM</a></li>
+				<li><a href="#!">2:00 PM</a></li>
+				<li><a href="#!">3:00 PM</a></li>
+				<li><a href="#!">4:00 PM</a></li>
+				<li><a href="#!">5:00 PM</a></li>
+			</ul>
 			<nav>
 				<div class="nav-wrapper">
 					<a href="#!" class="brand-logo">Logo</a>
 					<ul class="right hide-on-med-and-down">
 						<li class="searchBar"><input type="text" placeholder="Search The Park"></li>
+						<!-- Dropdown Trigger -->
+						<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+    
 					</ul>
 				</div>
 			</nav>
