updated search functionality and updated modal to include attraction type

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="nav-wrapper">
 					<a href="#!" class="brand-logo">Logo</a>
 					<ul class="right hide-on-med-and-down">
-						<li class="searchBar"><input type="text" placeholder="Search The Park"></li>
+						<li class="searchBar"><input id="search" type="text" placeholder="Search The Park"></li>
 						<!-- Dropdown Trigger -->
 						<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
     
@@ -63,16 +63,6 @@
   </footer>
 	  
 <!-- FOOTER END -->
-
- <!-- Modal Structure -->
- <div id="modal1" class="modal modal-fixed-footer">
-	<div class="modal-content">
-		<input type="text" placeholder="Search...">
-	</div>
-	<div class="modal-footer">
-		<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Search</a>
-	</div>
-</div>
 
 
 <!-- SCRIPTS -->
