--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<ul class="right hide-on-med-and-down">
 						<li class="searchBar"><input id="search" type="text" placeholder="Search The Park"></li>
 						<!-- Dropdown Trigger -->
-						<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+						<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Select a Time<i class="material-icons right">arrow_drop_down</i></a></li>
     
 					</ul>
 				</div>
